# Omnia-Language

./: Cargo.toml  README.md  README_RU.md  build.rs
src/: core.rs  main.rs  mvp.oa  parser.rs  test.oa
src/codegen/: mod.rs
src/core/: errors.rs  mod.rs  runtime.rs  utils.rs
src/core/omnia_types/: mod.rs  omnia_types.rs
src/core/utils/: mod.rs  numeric_utils.rs  stringutils.rs
src/generator/: mod.rs  semantics.rs  utils.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: ast.rs  mod.rs
src/parser/ast/: ast.rs  ast_vm.rs  mod.rs  nodes.rs
