[package]
name = "Omnia"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "omnic"
path = "src/main.rs"

[dependencies]
num-traits = "0.2.19"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.11"
clap = { version = "4.5.27", features = ["derive"] }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }

